--- a/AndroidDocumentationProjects/MyFirstApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidDocumentationProjects/MyFirstApp/app/src/main/res/layout/activity_main.xml
@@ -22,10 +22,11 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="0dp"
+        android:layout_width="149dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:onClick="sendMessage"
         android:text="@string/button_send"
         app:layout_constraintBaseline_toBaselineOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
